Closed Bug 96418 Opened 25 years ago Closed 25 years ago

Download dialog / filepicker not shown when downloading file

Categories

(SeaMonkey :: UI Design, defect)

defect
Not set
blocker

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.4

People

(Reporter: wd, Assigned: rpotts)

References

()

Details

(Keywords: regression, Whiteboard: critical to 0.9.4)

Attachments

(1 file)

BuildID: 2001082109 When I go to download a file, the filepicker is never shown. Reproducible: Always Steps to Reproduce: 1.Go to ftp://ftp.mozilla.org/pub/mozilla/nightly/2001-08-22-06-trunk 2.Click one of the files 3. Actual Results: The Filepicker / download dialog is never shown. Expected Results: Dialog shown. Judging by the network activity, the file *is* being downloaded, but it's just that the dialog isn't shown. If I Shift-Click the file, I can choose the location and I do get the download progress dialog.
Is it possible that it is hidden by another window? (not showing in the foreground?) Mozilla will begin downloading the file while the "file picker" is displayed. (I'm thinking maybe you might have clicked a window that covered up the progress/download window, OR, you have set Mozilla to "never ask again" for the type of file you're downloading.) It's a slim chance, I know, because you note that it is "always" reproducible. I guess I wanna make sure though ;) Does any item appear in the taskbar.. such as "saving file" or "Downloading mozilla-win32.."? A note: I'm using win2000 currently, and do not notice this problem. If no one else replies during the day, I will check with winME when I get home. Also, I assume you eventually did download 20010821.. did you try reproducing the problem with that build?
No.... no dialog is present at all. After downloading the 2001082203 build with IE, the problem still exists, too.
Yikes! No need for me to check it at home.. I re-tried the downloading again, after restarting Mozilla (build 20010822). (I'm still using win2000). More information: ~~ When I click on a link from "http://ftp.mozilla.org/pub/mozilla/nightly/2001-08-22-06-trunk list, nothing happens (no window pops up, and NO network activity) ~~ Using the "ftp" version: ftp://ftp.mozilla.org/pub/mozilla/nightly/2001-08-22-06-trunk I get the following error: "/pub/mozilla/nightly/2001-08-22-06-trunk/mozilla-win32-talkback.zip: Not a directory" ~~ Both of these things happen with any link I choose, and from all the directories I have been to on the mozilla servers. ~~ Using "shift-click" OR "Save Link As..." (from the right click menu) will make it work. ~~ I have tried a few external sites (unrelated to Mozilla) and can confirm the same problem exists on those sites too (not a specific 'mozilla.org' problem)
Yeah, I got a "not a directory" error at: http://download.cnet.com/downloads/0-10000-50-1484995.html?tag=spdl Wasn't sure if it was related to this, though.
Keywords: regression
Whiteboard: critical to 0.9.4
adding to CC, sorry for spam. (shouldn't users who add "additional comments" automatically be added to CC list? I thought that was once the case) Also, you _may_ want to change severity to "critical", as I could see this becoming quite a problem. (Please forgive me if these messages are duplicated... I had 2 mid-air collisions while trying to send them) :(
unlikely this is toolkit related. probably something changed in xpapps
Assignee: trudelle → blakeross
Component: XP Toolkit/Widgets → XP Apps: GUI Features
QA Contact: jrgm → sairuh
I wonder if this is related to bug 95975 ?
It _could_ be related to bug 95975, but i'm not sure that it is. This appears to be a 'Microsoft Windows' problem so far (aren't they all?). 95975 looks specific to Linux problem.. but you're right in that any changes with that code could affect Windows versions too. Also, 95975 shows problems with crashing of Mozilla. So far, there aren't any "crashes" reported with this problem.
I'm seeing this on Linux as well.
OS: Windows ME → All
*** Bug 96486 has been marked as a duplicate of this bug. ***
The same thing works for http:// links. Nothing happens when clicking on a link. Right clicking and selecting "save link as" works. However, the no action behavior on a normal click is starting to pose a major problem. It doesn't make Mozilla nonfunctional, but it's annoyingly close.
Correction. It seems to work when the link leads to a file that is non-HTML... ftp or http protocol... I just tested and can confirm the behavoir... Is this something with header processing or url parsing?
A fix for Bug 84409 went in around that time, I don't know if it's related but it might be worth a look...
*** Bug 96326 has been marked as a duplicate of this bug. ***
This is rpott's change for bug 96029. If I revert the change in the test back to |if (bAbortProcess) return rv;| then the routine keeps running and the filepicker is shown.
Assignee: blakeross → rpotts
It does not seem to be a GUI problem if bug 96326 is a dupe of this. Bug 96326 describes a problem that involves redirecting to download site. The error seems to happen before redirected to a correct server location.
*** Bug 96632 has been marked as a duplicate of this bug. ***
*** Bug 96651 has been marked as a duplicate of this bug. ***
Keywords: nsenterprise
this blocks my testing of helper app and downloading ui testing. marking as such. any progress?
Severity: major → blocker
Hardware: PC → All
Ack, I can't download todays product 'cause the helper app dialog won't come up! This isn't good. Rick, can you look at this today?
Yep... I'll try to fix it tonight...
Depends on: 96029
*** Bug 96778 has been marked as a duplicate of this bug. ***
I've just attached a patch that fixes this problem... mscott, can i get a review so I can check it in... -- rick
*** Bug 96714 has been marked as a duplicate of this bug. ***
Target Milestone: --- → mozilla0.9.4
r=valeski
sr=mscott
*** Bug 96852 has been marked as a duplicate of this bug. ***
I've just checked the patch into the trunk...
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
*** Bug 96931 has been marked as a duplicate of this bug. ***
*** Bug 96973 has been marked as a duplicate of this bug. ***
*** Bug 96960 has been marked as a duplicate of this bug. ***
*** Bug 96945 has been marked as a duplicate of this bug. ***
vrfy fixed. linux, 2001.08.27.08-comm winnt, 2001.08.27.06-comm mac os x, 2001.08.27.05-comm mac os 9.1 [classic emul on x], 2001.08.27.08-comm
Status: RESOLVED → VERIFIED
*** Bug 97986 has been marked as a duplicate of this bug. ***
I seen the bug being fixed in a nightly release, but it looks like it reapeared... I have build 2001083003 and I can't download anymore
Or works now/latest trunk (0408). Sorry 4 spam.
Product: Core → Mozilla Application Suite
Component: XP Apps: GUI Features → UI Design
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: