bug #96418 (r=valeski, sr=mscott).  SaveAs dialog not shown when saving file...